--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>lorem ipsum</p>
+    <p style="width: 100px; height: 50px;">lorem ipsum</p>
 </body>
 </html>
