--- a/index2.html
+++ b/index2.html
@@ -6,12 +6,7 @@
     <title>szczxpxk</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="bd1">
-    <h1 id="h1">dlaczego nie warto byc karlem</h1> 
-    <p id="p1">dedykacja dla szympeta i monomarcela</p>
-    <button type="submit" id="b1""><a href="index2.html" id="a1">monomarcel i szympet to karly</a></button>
-
-
-
+<body id="bd2">
+    <p>lorem ipsums</p>
 </body>
 </html>
