--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body id="bd1">
     <h1 id="h1">dlaczego nie warto byc karlem</h1> 
     <p id="p1">dedykacja dla szympeta i monomarcela</p>
-    <button type="submit" id="b1""><a href="index2.html" id="a1">monomarcel i szympet to karly</a></button>
+
+    <button type="submit" id="b1"><a href="index2.html" id="a1">monomarcel i szympet to karly</a></button>
 
 
 
