--- a/index3.html
+++ b/index3.html
@@ -6,10 +6,10 @@
     <title>szczxpxk</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="bd2">
-    <h1 id="h2">pierwszy powud to to ze zabieraja ci kanapki jak mikrocypkowi</h1>
-    <img src="kanapki.jpg" id="img1"> 
+<body id="bd3">
+    <h1 id="h3">drugi powud ze ryby sa wieksze od ciebie</h1>
+    <img src="okon.png" id="img2">
     <p></p>
-    <button type="submit" id="b2"><a href="index3.html">drugi powod</a></button>
+    <button type="submit" id="b3"><a href="index3.html">drugi powod</a></button>
 </body>
 </html>
