--- a/index4.html
+++ b/index4.html
@@ -6,10 +6,10 @@
     <title>szczxpxk</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body id="bd3">
-    <h1 id="h3">drugi powud ze ryby sa wieksze od ciebie</h1>
-    <img src="okon.png" id="img2">
+<body id="bd4">
+    <h1 id="h4">czwarte to ze jestescie pecikami</h1>
+    <img src="bg5.jpg" id="img3">
     <p></p>
-    <button type="submit" id="b3"><a href="index4.html">trzeci powod</a></button>
+    <button type="submit" id="b4"><a href="index.html">powrut</a></button>
 </body>
 </html>
